--- a/src/styles/components/layaout/Header.css
+++ b/src/styles/components/layaout/Header.css
@@ -10,3 +10,27 @@ header {
   text-align: center;
   padding: 20px;
 }
+
+.audio-btn {
+  position: fixed;
+  top: 10px;
+  right: 20px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.audio-btn svg {
+  transition: transform 0.3s ease-in-out;
+}
+
+.audio-btn:hover svg {
+  transform: scale(1.2);
+}
+
+.volume-slider {
+  position: fixed;
+  top: 60px;
+  right: 20px;
+  width: 100px;
+}
